--- a/plugin/writer/hdfswriter/pom.xml
+++ b/plugin/writer/hdfswriter/pom.xml
@@ -109,6 +109,12 @@
             </exclusions>
         </dependency>
 
+        <dependency>
+            <groupId>com.squareup.okhttp3</groupId>
+            <artifactId>okhttp</artifactId>
+            <version>4.9.0</version>
+        </dependency>
+
     </dependencies>
     <build>
         <plugins>
